Rounded border + overflow hidden bugfix

--- a/src/css/night/_basics.sass
+++ b/src/css/night/_basics.sass
@@ -11,6 +11,9 @@
   +nested-reset()
   +border-radius(5px)
 
+  // Webkit bugfix for rounded border with overflow: hidden
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC)
+
   position: absolute
   width: 100%
   height: 100%
